Fix mobile diff author note on dark mode
Updates the styles for the author note shown at the bottom of the screen
on the diff page on narrow displays to use Codex design tokens so that
it will use dark colors when dark mode is enabled.

The color for the edit count is changed from #72777d (color-placeholder
/ color-disabled) to a darker color #54595d to use a more appropriate
token (color-subtle).

Bug: T370003

--- a/skinStyles/mediawiki.diff.styles.less
+++ b/skinStyles/mediawiki.diff.styles.less
@@ -105,8 +105,8 @@
 		position: fixed;
 		height: 8em;
 		padding: 1em;
-		background-color: #f8f9fa;
-		border-top: 1px solid #c8ccd1;
+		background-color: @background-color-interactive-subtle;
+		border-top: 1px solid @border-color-subtle;
 		bottom: 0;
 		left: 0;
 		right: 0;
@@ -165,7 +165,7 @@
 		span {
 			text-align: center;
 			font-size: 1.85em;
-			color: #72777d;
+			color: @color-subtle;
 			display: block;
 			line-height: 20px;
 		}
